<resources>
    <string name="app_name">Chat</string>
    <string name="title_logout">Log out</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="continues">Continue</string>
    <string name="editText">Write your code here</string>
    <string name="contacts">Contacts</string>
    <string name="name">User Name</string>
    <string name="accept_request">Accept Friend Request</string>
    <string name="decline_request">Cancel Friend Request</string>
    <string name="user_name">User Name</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="calling">Calling...</string>
</resources>
