<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/background_profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/profile_image"
        android:scaleType="centerCrop"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:maxLines="2"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_below="@+id/name_profile"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_friend"
        android:padding="5dp" />

    <Button
        android:id="@+id/decline_friend_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_below="@+id/add_button"
        android:layout_marginTop="1dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cancel_friend_request"
        android:visibility="gone"
        android:padding="5dp" />

</RelativeLayout>