<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp">
    </TextView>


    <RelativeLayout
        android:id="@+id/phoneAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    app:ccp_defaultNameCode="IN" />

                <EditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/phone_number_hint"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:backgroundTint="@android:color/white"
                    android:autofillHints="@string/phone_number_hint" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>



    <EditText
        android:id="@+id/codeText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:hint="@string/editText"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        android:singleLine="true"
        android:layout_below="@+id/phoneAuth"
        android:drawableLeft="@drawable/password"
        android:drawableTint="@color/white"
        android:backgroundTint="@android:color/white"
        android:visibility="gone"
        android:autofillHints="@string/editText" />

    <Button
        android:id="@+id/continueNextButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/codeText"
        android:layout_centerHorizontal="true"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>


</RelativeLayout>